ffi/derive/tests/ui_fail/fieldless_enum_with_expicit_discriminant.rs
use iroha_ffi::FfiType;

#[derive(FfiType)]
enum EnumWithExplicitDiscriminant { 
    A = 1,
    B,
    C,
    D,
}

fn main() {}
